--- a/appWarmaster/src/estilos/administrarTorneo.css
+++ b/appWarmaster/src/estilos/administrarTorneo.css
@@ -422,6 +422,7 @@
     box-shadow: 0 2px 10px rgba(0,0,0,0.05);
     border-radius: 8px;
     overflow: hidden;
+    color:#333;
 }
 
 .tabla-jugadores-detalle thead {
@@ -564,6 +565,7 @@
     box-shadow: 0 2px 10px rgba(0,0,0,0.05);
     border-radius: 8px;
     overflow: hidden;
+    color:#333;
 }
 
 .tabla-clasificacion thead {
